--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  /* margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  -moz-osx-font-smoothing: grayscale; */
+  background: linear-gradient(180deg, #2A2D32 0%, #131313 99%);
+  /* height: 7128px; */
+  font-family: 'Poppins', sans-serif;
 }
