--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,20 @@
   margin-left: 150px;
   margin-right: 150px;
 }
+
+@media (max-width: 1200px) { 
+  .App{
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .App{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
