--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,5 +1,5 @@
 .card{
-    width: 508px;
+    width: 30%;
     background: linear-gradient(180deg, #2A2D32 0%, #131313 99.17%);
     box-shadow: 36px 40px 56px rgba(0, 0, 0, 0.19);
     border-radius: 20px;
@@ -39,6 +39,12 @@
     font-size: 16px;
     line-height: 28px;
     letter-spacing: 0.75px;
+    cursor: pointer;
+}
+
+.card-header--mint button:hover{
+    background: #24272C;
+    box-shadow: inset -10px -10px 20px rgba(255, 255, 255, 10%), inset 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 .card-body p{
@@ -81,7 +87,7 @@
 
 .card-footer--property{
     display: flex;
-    gap: 40px;
+    gap: 10px
 }
 
 .card-footer--table{
@@ -101,4 +107,23 @@
 .card-footer--table .porcent{
     font-weight: 700;
     font-size: 29.124px;
+}
+
+@media (max-width: 992px) {
+
+    .card{
+        width: 40%;
+    }
+}
+
+@media (max-width: 768px) {
+    .card{
+        width: 80%;
+    }
+}
+
+@media (min-width: 576px) {
+    .card{
+        width: 100%;
+    }
 }
