--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -49,3 +49,27 @@
     display: flex;
     gap: 40px;
 }
+
+@media (max-width: 992px) {
+    .list {
+        gap: 0px;
+    }
+
+    .footer {
+        gap: 100px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .list {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 576px) {
+    .footer{
+        gap: 0;
+    }
+}
