--- a/src/components/nfts/nfts.css
+++ b/src/components/nfts/nfts.css
@@ -23,3 +23,63 @@
     background-clip: text;
     text-fill-color: transparent;
 }
+
+@media (max-width: 1400px) { 
+    .nfts h2{
+        font-size: 80px;
+    }
+
+    .nfts{
+        height: 700px;
+    }
+
+    .card-footer--property {
+        margin-left: -30px;
+        gap: 10px;
+    }
+
+    .card-footer--table p {
+        font-size: 16px;
+    }
+
+    .cards {
+        gap: 20px;
+        
+    }
+}
+
+
+@media (max-width: 992px) {
+
+    .nfts{
+        height: 1100px;
+    }
+
+    .cards {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+}
+
+@media (max-width: 768px) {
+    .nfts{
+        height: 2200px;
+    }
+
+    .nfts h2 {
+        text-align: center;
+    }
+}
+
+@media (max-width: 576px) {
+    .nfts{
+        height: 1900px;
+        justify-content: center;
+        margin-top: 50px;
+    }
+
+    .nfts h2{
+        font-size: 3em;
+    }
+}
