--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,20 @@ body {
   /* height: 7128px; */
   font-family: 'Poppins', sans-serif;
 }
+
+body::-webkit-scrollbar {
+  width: 15px;
+}
+
+
+  
+body::-webkit-scrollbar-track {
+  background-color: #2A2D32;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+  
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #131313;
+  /* outline: 2px solid #131313; */
+}
