--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -122,8 +122,23 @@
     }
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+
+    .card-footer{
+        width: 70%;
+    }
+
+    .card-footer h3 {
+        font-size: 50px;
+    }
+
     .card{
         width: 100%;
+    }
+}
+
+@media (max-width: 400px) {
+    .card-footer h3 {
+        font-size: 50px;
     }
 }
