--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -144,3 +144,15 @@
         text-align: center;
     }
 }
+
+@media (max-width: 400px) {
+
+    .header-text h1 {
+        font-size: 40px;
+        margin-top: 40px;
+    }
+
+    .header .header-text--btn{
+        flex-wrap: wrap;
+    }
+}
