--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -87,3 +87,10 @@
         padding: 20px;
     }
 }
+
+@media (max-width: 576px) {
+    .menu ul{
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+}
